--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "angular2-webpack-starter",
+  "name": "angular2-security",
   "version": "5.4.1",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
+  "description": "An Angular 2 web project",
   "keywords": [
     "angular2",
     "webpack",
     "typescript"
   ],
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "author": "Melon <nimda_wen@hotmail.com>",
+  "homepage": "https://github.com/meloncocoo/security",
   "license": "MIT",
   "scripts": {
     "build:aot:prod": "npm run clean:dist && npm run clean:aot && webpack --config config/webpack.prod.js  --progress --profile --bail",
@@ -80,10 +80,13 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jasmine-core": "^2.5.2",
+    "ng2-bootstrap": "^1.2.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "zone.js": "~0.7.4"
@@ -103,7 +106,8 @@
     "awesome-typescript-loader": "~3.0.0-beta.18",
     "codelyzer": "~2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.26.0",
+    "css-loader": "^0.25.0",
+    "css-to-string-loader": "^0.1.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "~2.0.0-beta.4",
@@ -125,11 +129,12 @@
     "karma-webpack": "2.0.1",
     "ng-router-loader": "^1.0.2",
     "ngc-webpack": "1.1.0",
-    "node-sass": "^4.2.0",
+    "node-sass": "^4.3.0",
     "npm-run-all": "^4.0.0",
     "parse5": "^3.0.1",
     "protractor": "^4.0.14",
     "raw-loader": "0.5.1",
+    "resolve-url-loader": "^1.6.1",
     "rimraf": "~2.5.4",
     "sass-loader": "^4.1.1",
     "script-ext-html-webpack-plugin": "^1.3.2",
@@ -153,10 +158,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
+    "url": "https://github.com/meloncocoo/security.git"
   },
   "bugs": {
-    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
+    "url": "https://github.com/meloncocoo/security/issues"
   },
   "engines": {
     "node": ">= 4.2.1",
