--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ie-shim": "^0.1.0",
     "jasmine-core": "^2.5.2",
     "ng2-bootstrap": "^1.2.1",
+    "ng2-translate": "^5.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "zone.js": "~0.7.4"
