--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
     "webpack": "2.2.0-rc.4",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-dev-server": "^1.12.0",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.2",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "~2.4.0"
