--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jasmine-core": "^2.5.2",
     "ng2-bootstrap": "^1.2.1",
     "ng2-cookies": "^1.0.4",
+    "ng2-nvd3": "^1.1.3",
     "ng2-translate": "^5.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
